Quorum/Library/Tests/TypeChecker/Pass/ExpAssignIntObjObject.quorum
class Main
    action Main
        Integer i
        Object o
        i:SetValue(5)
        o = cast(Object, i)
        Integer int = cast(Integer, o)
        if int:GetValue() = 5
            output "passed"
        end
    end
end
