Quorum/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjIntObjField.quorum
class main
    Integer i
    Boolean bool
    action Main
        i:SetValue(5)
        bool = cast(Boolean, i)
    end
end